User story 2 & 3, timestamp and revser order with passed tests

--- a/app/views/links/new.erb
+++ b/app/views/links/new.erb
@@ -1,4 +1,4 @@
-<h1>New Tweet</h1>
+<h1>New Peep</h1>
 
 <form action='/links/peeped' method='post'>
   <h3>User <input type='text' name="user"></h3>
