--- a/app/views/links/index.erb
+++ b/app/views/links/index.erb
@@ -1,10 +1,11 @@
 <h1>Home</h1>
 
 <ol id='peeps'>
-   <% @peeps.each do |peep| %>
+   <% @peeps.reverse.each do |peep| %>
    <li>
      User: <%= peep.user %>
      Peep: <%= peep.content %>
+     Posted at: <%= peep.created_at %>
    </li>
   <%end%>
 </ol>
